# ProiectPOO

./: .gitignore  CMakeLists.txt  README.md  app  asistenti.txt  inventar.txt  medici.txt  pacienti.txt  sectii.txt  users.txt
src/: AnalizaLaborator.cpp  AnalizaLaborator.h  Angajat.cpp  Angajat.h  AparaturaMedicala.cpp  AparaturaMedicala.h  Asistent.cpp  Asistent.h  AuditLog.cpp  AuditLog.h  AuthService.cpp  AuthService.h  Consultatie.cpp  Consultatie.h  Exceptii.h  FinanciarManager.cpp  FinanciarManager.h  HospitalManager.cpp  HospitalManager.h  Internare.cpp  Internare.h  Inventar.h  Medic.cpp  Medic.h  MenuManager.cpp  MenuManager.h  NotificationService.cpp  NotificationService.h  Pacient.cpp  Pacient.h  Pat.cpp  Pat.h  Persoana.cpp  Persoana.h  PersonalAuxiliar.cpp  PersonalAuxiliar.h  Produs.cpp  Produs.h  Programare.cpp  Programare.h  (+9 more)
tests/: test_main.cpp
